package maidsafe.vault.protobuf;
import "maidsafe/vault/pmid_account.proto";
option optimize_for = LITE_RUNTIME;

message PmidTotals {
  required bytes serialised_pmid_registration = 1;
  required PmidRecord pmid_record = 2;
}

// Data put to the network by the client
message PutData {
  required int32 type = 1;
  required bytes name = 2;
  required int32 size = 3;
  optional int32 replications = 4;
}

message MaidPmidsInfo {
  required bytes maid_name = 1;
  repeated PmidTotals pmid_totals = 2;
  required int64 total_data_stored_by_pmids = 3;
  required int64 total_put_data = 4;
}

message MaidAccountStorage {
  required bytes maid_name = 1;
  repeated PutData recent_put_data = 2;
}

message ArchivedMaidData {
  repeated PutData put_data = 1;
}
